# streamlabs-overlay

./: .clang-format  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  appveyor.yml  azure-pipelines.yml  binding.gyp  help.html  index.js  index.test.js  package.json  readme.md  typings.d.ts
.github/workflows/: build.yml
ci/: bump-version.js
cmake/: NodeJS.cmake  approved_dependents.txt
examples/: example_interactivity.js  example_interactivity_console.js  example_interactivity_window.js  example_with_autohide.js  example_with_hwnd.js  example_with_hwnd_node.js  example_with_offscreen.js  example_with_relaunch.js  example_with_resize.js  example_with_visibility.js  simple_add_remove_overlays.js  simple_load_module.js  simple_setup_overlay.js  simple_thread_stress_text.js
include/: overlay_logging.h  overlay_paint_frame.h  overlay_paint_frame_js.h  overlays.h  settings.h  sl_overlay_api.h  sl_overlay_window.h  sl_overlays.h  sl_overlays_settings.h  smg_overlays.h  stdafx.h  user_input_callback.h  web_page.h  web_view.h
node_module/: module.cpp  user_input_callback.cpp  user_input_callback.h
npm/: index.js  package.json  typings.d.ts
scripts/: bump-version.js  check_dependencies.cmd  pack.js
src/: main.cpp  module.cpp  overlay_logging.cpp  overlay_paint_frame.cpp  overlay_paint_frame_js.cpp  overlays.cpp  settings.cpp  sl_overlay_api.cpp  sl_overlay_window.cpp  sl_overlays.cpp  sl_overlays_settings.cpp  sl_web_view.cpp  smg_overlays.cpp  stdafx.cpp  user_input_callback.cpp  web_page.cpp  web_view.cpp
webform/: webform.cpp  webform.h
